--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.8",
     "gsap": "^3.14.2",
     "lenis": "^1.3.17",
+    "lucide-react": "^0.562.0",
     "motion": "^12.26.2",
     "ogl": "^1.0.11",
     "react": "^19.2.0",
