--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
+    "@vercel/speed-insights": "^1.3.1",
     "bootstrap": "^5.3.8",
     "gsap": "^3.14.2",
     "lenis": "^1.3.17",
