--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
+    "@monaco-editor/react": "^4.7.0",
     "@vercel/speed-insights": "^1.3.1",
     "bootstrap": "^5.3.8",
     "gsap": "^3.14.2",
@@ -26,6 +27,7 @@
     "react-icons": "^5.5.0",
     "react-katex": "^3.1.0",
     "react-router-dom": "^7.12.0",
+    "react-syntax-highlighter": "^16.1.0",
     "three": "^0.182.0"
   },
   "devDependencies": {
